[gd_scene load_steps=18 format=3 uid="uid://cexu8vsrt1jho"]

[ext_resource type="Script" uid="uid://c3hv7v2dtx7h0" path="res://scripts/TutorialDummy.gd" id="1_lu3ac"]
[ext_resource type="PackedScene" uid="uid://dlrb2m6f8fadf" path="res://scenes/other/vfx/ImpactVFX.tscn" id="2_5rkcl"]
[ext_resource type="PackedScene" uid="uid://ds2km4lw3xrqp" path="res://scenes/BarrageBoulder.tscn" id="2_7ch85"]
[ext_resource type="PackedScene" uid="uid://c7e35pnktddno" path="res://scenes/characters/BigDummy.tscn" id="2_f2h6d"]
[ext_resource type="PackedScene" uid="uid://ipqvbwkp71ku" path="res://scenes/other/attack_indicators/SwipeIndicator.tscn" id="3_wk3td"]
[ext_resource type="PackedScene" uid="uid://bu1jujqa8g7eb" path="res://scenes/other/attack_indicators/TongueGrabIndicator.tscn" id="4_7ch85"]
[ext_resource type="PackedScene" uid="uid://dykpluj0kpp26" path="res://scenes/other/vfx/GreatSlash.tscn" id="5_wk3td"]
[ext_resource type="PackedScene" uid="uid://ypmbr1dd8hlv" path="res://scenes/other/vfx/BoulderSummonVFX.tscn" id="7_gov4r"]
[ext_resource type="AudioStream" uid="uid://4o535g4gucak" path="res://assets/audio/sfx/WhirlwindChargeup.wav" id="9_kqoqp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rfu1p"]
albedo_color = Color(0.439216, 0.239216, 0, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_7ou3l"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y8dm5"]
height = 6.0
radius = 3.0

[sub_resource type="Animation" id="Animation_cuxop"]
length = 0.001

[sub_resource type="Animation" id="Animation_ht2tr"]
resource_name = "slash"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Char_BigDummy/DummyBase/GAMERIG_BigDummy/SlashHitArea/SlashHitboxShape:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rujn5"]
_data = {
&"RESET": SubResource("Animation_cuxop"),
&"slash": SubResource("Animation_ht2tr")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_edvls"]
height = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_dwgjd"]
radius = 0.7

[node name="TutorialDummy" type="CharacterBody3D" node_paths=PackedStringArray("DummyAnimationController", "DummyEntity", "DummyBase", "BoulderSpawnPos", "StunVFXController", "HitFlashVFX", "WhirlwindVFX", "HitImpactPos", "EyesMesh", "WhirlwindChargeupPlayer") groups=["enemy"]]
script = ExtResource("1_lu3ac")
DummyAnimationController = NodePath("Char_BigDummy/AnimationTree")
DummyEntity = NodePath("Char_BigDummy/DummyBase/GAMERIG_BigDummy")
DummyBase = NodePath("Char_BigDummy/DummyBase")
BoulderSpawnPos = NodePath("Char_BigDummy/DummyBase/GAMERIG_BigDummy/Skeleton3D/JawPos/BoulderSpawnPos")
BarrageBoulder = ExtResource("2_7ch85")
StunVFXController = NodePath("Char_BigDummy/VFX/StunVFXController")
HitFlashVFX = NodePath("Char_BigDummy/VFX/HitFlashVFX")
WhirlwindVFX = NodePath("Char_BigDummy/VFX/WhirlwindVFX")
HitImpactVFX = ExtResource("2_5rkcl")
HitImpactPos = NodePath("Char_BigDummy/DummyBase/GAMERIG_BigDummy/Skeleton3D/JawPos/HitImpactPos")
SlashAttackIndicator = ExtResource("3_wk3td")
BarrageLaneIndicator = ExtResource("4_7ch85")
SlashVFX = ExtResource("5_wk3td")
BarrageSummonVFX = ExtResource("7_gov4r")
EyesMesh = NodePath("Char_BigDummy/DummyBase/GAMERIG_BigDummy/Skeleton3D/Eyes")
WhirlwindChargeupPlayer = NodePath("SFX/WhirlwindChargeup")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="." groups=["enemy"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01015, 0)
visible = false
sides = 6
material = SubResource("StandardMaterial3D_rfu1p")

[node name="DummyHitboxShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01015, 0.00436592)
shape = SubResource("CylinderShape3D_7ou3l")

[node name="CSGSphere3D" type="CSGSphere3D" parent="." groups=["enemy"]]
transform = Transform3D(-0.00546982, -0.16491, 3.2425e-06, -0.16491, 0.00546982, 0, -1.3867e-08, -4.18077e-07, -1.279, 0.398, 1.01015, -0.4)
visible = false
radius = 0.387232

[node name="CSGSphere3D2" type="CSGSphere3D" parent="CSGSphere3D" groups=["enemy"]]
transform = Transform3D(0.349121, 0.0502736, -5.40085, 0.0346924, 0.487975, 1.63523, 0.045971, -0.012478, 0.68559, -1.92256, 0.58247, 0.508016)
visible = false

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01015, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.692895, 0)
shape = SubResource("CylinderShape3D_y8dm5")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rujn5")
}

[node name="ground" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.27513, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.10321, 0)
shape = SubResource("CylinderShape3D_edvls")

[node name="Char_BigDummy" parent="." instance=ExtResource("2_f2h6d")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0554676, 0)

[node name="DummyBase" parent="Char_BigDummy" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="Skeleton3D" parent="Char_BigDummy/DummyBase/GAMERIG_BigDummy" index="0"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="BoulderSpawnPos" parent="Char_BigDummy/DummyBase/GAMERIG_BigDummy/Skeleton3D/JawPos" index="2"]
transform = Transform3D(1, 0, -2.07523e-12, 0, 1, -2.84217e-14, 1.29963e-11, 1.98952e-13, 1, -1.20795, 1.73393, -2.9942e-07)

[node name="SlashHitArea" type="Area3D" parent="Char_BigDummy/DummyBase/GAMERIG_BigDummy" index="1"]
transform = Transform3D(-0.0331503, -0.99945, 2.53518e-06, -0.99945, 0.0331503, 0, -8.4042e-08, -2.53379e-06, -1, 0.142183, 1.30306, -0.836582)
collision_layer = 0
collision_mask = 2

[node name="SlashHitboxShape" type="CollisionShape3D" parent="Char_BigDummy/DummyBase/GAMERIG_BigDummy/SlashHitArea"]
transform = Transform3D(0.785964, 0.618272, 0, -0.618272, 0.785964, 0, 0, 0, 1, 0.265902, 0.13094, 0.388162)
shape = SubResource("SphereShape3D_dwgjd")
disabled = true

[node name="HitFlashVFX" parent="Char_BigDummy/VFX" index="1" node_paths=PackedStringArray("OverlayMatMeshes")]
HitFlashDuration = 0.2
HitFlashPeakBlendValue = 0.8
OverlayMatMeshes = [NodePath("../../DummyBase/BaseOutline"), NodePath("../../DummyBase/GAMERIG_BigDummy/Skeleton3D/Eyes"), NodePath("../../DummyBase/GAMERIG_BigDummy/Skeleton3D/DummyOutline"), NodePath("../../DummyBase/GAMERIG_BigDummy/Skeleton3D/BigDummyMesh"), NodePath("../../DummyBase")]

[node name="SFX" type="Node3D" parent="."]

[node name="WhirlwindChargeup" type="AudioStreamPlayer3D" parent="SFX"]
stream = ExtResource("9_kqoqp")
max_distance = 40.0

[connection signal="body_entered" from="Area3D" to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="body_entered" from="ground" to="." method="_on_ground_body_entered"]
[connection signal="body_entered" from="Char_BigDummy/DummyBase/GAMERIG_BigDummy/SlashHitArea" to="." method="_on_slash_entered"]

[editable path="Char_BigDummy"]
[editable path="Char_BigDummy/DummyBase/GAMERIG_BigDummy/Skeleton3D/OrbHandPos/OrbFlare"]
